# dejavu-tacos-temporal-oms-demo

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: pyproject.toml
backend/src/dejavu_tacos/: config.py  main.py  models.py
backend/src/dejavu_tacos/api/: events.py  routes.py
backend/src/dejavu_tacos/services/: cart.py  payment.py  store.py
backend/src/dejavu_tacos/traditional/: handler.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf  worker-dotnet.Dockerfile  worker-go.Dockerfile  worker-java.Dockerfile  worker-python.Dockerfile  worker-typescript.Dockerfile
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/: BackstagePanel.tsx  Cart.tsx  Checkout.tsx  KitchenDisplay.tsx  Menu.tsx  OrderTracker.tsx  PhoneFrame.tsx  SettingsModal.tsx  TemporalCodeView.tsx  TraditionalArchDiagram.tsx  WorkflowDiagram.tsx
frontend/src/data/: workflowCode.ts
frontend/src/hooks/: useSSE.ts
frontend/src/types/: index.ts
scripts/: start.sh
workflows/dotnet/: BackendClient.cs  DejaVuWorkflows.csproj  Models.cs  OrderActivities.cs  OrderWorkflow.cs  Program.cs
workflows/go/: go.mod
workflows/go/activities/: activities.go  backend.go
workflows/go/workflows/: compensation.go  order_workflow.go
workflows/java/: build.gradle.kts  settings.gradle.kts
workflows/python/: pyproject.toml
workflows/python/src/dejavu_workflows/: activities.py  demo.py  order_workflow.py  worker.py
workflows/typescript/: package.json  tsconfig.json
workflows/typescript/src/: activities.ts  (+3 more)
(+8 files in other folders)
