[project]
name = "dejavu-tacos-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.0",
    "temporalio>=1.9",
    "pydantic>=2.0",
    "aiohttp>=3.9",
]

[project.scripts]
server = "dejavu_tacos.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dejavu_tacos"]
