[project]
name = "dejavu-workflows"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.9",
    "dejavu-tacos-backend",
    "aiohttp>=3.9",
]

[project.scripts]
worker = "dejavu_workflows.worker:main"
demo = "dejavu_workflows.demo:run_all"

[tool.uv.sources]
dejavu-tacos-backend = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dejavu_workflows"]
